# tokoin_challenge

./: .gitconfig  .gitignore  .gitpod.yml  README.md  pyproject.toml  repl.ipy
tokoin_challenge/: config.py  main.py  search.py
tokoin_challenge/config/: config.py  test_config.py
tokoin_challenge/file_ops/: peek.py
tokoin_challenge/matcher/: obj_deep_search.py  test_obj_deep_search.py
tokoin_challenge/model/: base_model.py  name_mixin.py  organization.py  ticket.py  user.py
tokoin_challenge/search/: search.py  search_user.py  test_search.py
tokoin_challenge/stream/: data_stream.py  obj_collector.py  test_stream.py
