[tool.poetry]
name = "tokoin_challenge"
version = "0.1.0"
description = ""
authors = ["InNoobWeTrust <vu.truong.16193@gmail.com>"]

[tool.poetry.scripts]
search = "tokoin_challenge.search:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
jedi-language-server = "^0.35.1"
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
ipython = "^8.2.0"
pyright = "^1.1.241"
autopep8 = "^1.6.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
